fix z-index

--- a/@antv/gatsby-theme-antv/site/components/Header.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Header.module.less
@@ -12,7 +12,7 @@
   align-items: center;
   padding: 0 60px;
   position: relative;
-  z-index: 2;
+  z-index: 10;
   font-family: Avenir, @font-family;
 
   &.transparent {
